# media-agent-lab

./: .gitignore  APP_IDEA.md  README.md  package.json
apps/api/: pyproject.toml
apps/api/src/media_agent_lab_api/: __init__.py  audio_converter.py  config.py  main.py  mix_analyzer.py  models.py  pipeline.py  prompting.py  stem_separator.py  store.py  structure_analyzer.py  vocal_analyzer.py  worker.py
apps/api/tests/: test_api.py  test_audio_converter.py  test_mix_analyzer.py  test_pipeline.py  test_prompting.py  test_stem_separator.py  test_store.py  test_structure_analyzer.py  test_vocal_analyzer.py
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  index.css  react-shim.d.ts  types.ts
docs/superpowers/plans/: 2026-06-28-cuda-ready-mvp-skeleton.md  2026-06-29-vocal-structure-prompt.md
docs/superpowers/specs/: 2026-06-28-audio-prompt-builder-mvp-design.md  2026-06-29-vocal-structure-prompt-design.md
scripts/: check_cuda.ps1
