[project]
name = "media-agent-lab-api"
version = "0.1.0"
description = "FastAPI backend for Audio Intelligence Prompt Builder"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.8.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0"
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
